# agilicious_ws

./: .gitignore  .gitmodules  Dockerfile  Dockerfile_PC  Dockerfile_nvidia_pc  build.sh  build_image.sh  compile_commands.json  launch_container.sh  start-vnc.sh
.devcontainer/: base.json
.devcontainer/jetson/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.devcontainer/mac/: devcontainer.json
.devcontainer/scripts/: host-setup-xauth.sh
mount/: .tmux.conf  .zsh_history
src/motion_capture_ros/: CMakeLists.txt  package.xml
src/motion_capture_ros/motion_capture/src/: motion_capture.cpp
src/motion_capture_ros/motion_capture_ros/: CMakeLists.txt
src/motion_capture_ros/motion_capture_ros/launch/: motion_capture.launch  motion_capture_optitrack.launch
src/motion_capture_ros/motion_capture_ros/src/: motion_capture.cpp
src/motion_capture_ros/motion_capture_ros_msgs/msg/: PointCloud.msg
src/motion_capture_ros/src/: motion_capture.cpp
src/policy_ros/: inference_server.py  mlp_ctrl_node.py  observation.py
src/policy_ros/protocol/: messages.py
tmux_script/: launch_onboard.sh  run_off_board_mac.sh
tmux_scripts/: test.sh
