<?xml version="1.0"?>
<package format="2">
  <name>motion_capture_ros</name>
  <version>0.0.1</version>
  <description>Motion Capture Package</description>

  <maintainer email="agoncalve@ethz.ch">agoncalve</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

</package>
